sense = None.txt
pygame 2.6.1 (SDL 2.32.4, Python 3.13.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/usr/lib/python3/dist-packages/pgzero/__main__.py", line 3, in <module>
    main()
    ~~~~^^
  File "/usr/lib/python3/dist-packages/pgzero/runner.py", line 79, in main
    code = compile(src, os.path.basename(path), 'exec', dont_inherit=True)
  File "shishkebab.py", line 145
    else:
IndentationError: unexpected indent
